Added BasePolymorphicTypeProvider SPI helper.